2002-08-07  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/gtk-xine.c: (gtk_xine_instance_init), (xine_thread),
	(gtk_xine_realize), (gtk_xine_new), (gtk_xine_check):
	* src/gtk-xine.h: add width and height args to gtk_xine_new,
	make gtk_xine_check do something useful
	* src/totem.c: (long_action), (action_error), (action_play),
	(action_play_pause), (action_fullscreen_toggle),
	(update_sliders_cb), (action_open_files), (on_error_event),
	(video_widget_create), (main): wait until Xine is up to make it play
	movies (using gtk_xine_check), mucho error dialog work.
	* src/totem.desktop.in: s/Media Player/Totem Movie Player/
	* src/totem.glade: move the sliders at 0 by default

2002-08-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added it to ALL_LINGUAS

2002-08-07  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (dest_size_cb), (frame_output_cb),
	(load_video_out_driver), (xine_thread), (configure_cb),
	(gtk_xine_realize), (gtk_xine_size_allocate):
	g_strfreev is nice, and fix some brain damage in configure_cb

2002-08-07  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/.cvsignore: added the marshal generated files
	* src/Makefile.am: upd
	* src/debug.h: fix declaration of TE and TL
	* src/gtk-xine.c:
	* src/gtk-xine.h: plenty of small fixes, and cleanups
	* src/totem.c: create the video widget after the window has been
	shown (should make it feel faster on slow machines), remove
	long_action()
	* src/totem.glade: make the video widget be at a 4:3 ratio by default

2002-08-06  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: added the marshal list
	* src/gtk-xine.c: (gtk_xine_class_init), (gtk_xine_instance_init),
	(gtk_xine_realize), (gtk_xine_idle_signal), (xine_event),
	(codec_reporting), (xine_error):
	* src/gtk-xine.h:
	* src/gtkxine-marshal.list: marshals
	* src/totem.c: (play_pause_set_label), (action_set_mrl),
	(action_previous), (action_next), (playlist_changed_cb),