@@ -78,9 +78,7 @@ Q: Totem doesn't appear in the applications to open videos in Nautilus.
 
 A: You probably installed Totem in a different prefix. Here is how to fix it.
    $ cd /where/the/totem/sources/are/
-   $ mkdir -p ~/.gnome/application-registry ~/.gnome/mime-info/
-   $ cp src/totem.applications ~/.gnome/application-registry ; \
-   	cp src/totem.keys ~/.gnome/mime-info/
+   $ cd data && make user-install
 
    And it should now. Enjoy.
 
