@@ -48,6 +48,7 @@ AM_GLIB_GNU_GETTEXT
 AC_OUTPUT([
 Makefile
 src/Makefile
+data/Makefile
 po/Makefile.in
 ])
 
