@@ -1,5 +1,14 @@
 2002-08-07  Bastien Nocera  <hadess@hadess.net>
 
+	* Makefile.am:
+	* README:
+	* configure.in:
+	* data/*: moved the arch-all stuff to data/, add a user-install target
+	for users to install the Nautilus configs if necessary, upd README,
+	change the previous and next button to the proper ones
+
+2002-08-07  Bastien Nocera  <hadess@hadess.net>
+
 	* README: upd
 	* src/gtk-xine.c: (gtk_xine_instance_init), (xine_thread),
 	(gtk_xine_realize), (gtk_xine_new), (gtk_xine_check):
